--- a/2nd_task/2nd_task.html
+++ b/2nd_task/2nd_task.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>ِAXIT</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>AXIT</title>
 </head>
 <body>
   <nav id="nav-bar">
@@ -24,33 +25,154 @@
    </div>
   </nav>
   <section id="welcome-form">
-    <div class="container">
-      <div class="left">
-        <h1>AX<span>IT</span></h1>
-        <p>MODERN AXURE TEMPLATE <br> FOR BEAUTIFUL PROTOTYPES</p>
-        <br>
-        <hr style="width: 5%; ">
-        <br>
-        <p class="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-          Beatae porro quam mollitia, reprehenderit debitis quaerat 
-          temporibus laboriosam corrupti amet excepturi placeat voluptatum iusto, 
-          tenetur magnam.</p>
+    <div class="overlay">
+      <div class="container">
+        <div class="left">
+          <h1>AX<span>IT</span></h1>
+          <p>MODERN AXURE TEMPLATE <br> FOR BEAUTIFUL PROTOTYPES</p>
           <br>
-          <button class="left-button" type="button" value="button">Download</button>
-      </div>
-      <div class="right">
-        <div class="form-container">
-          <form action="#" method="POST" class="register">
-              <label class="form-label"><p>Try Your <span> Free</span>Trial Today</p></label>
-              <input type="text" placeholder="Name" name="name">
-              <input type="email" placeholder="Email" name="email">
-              <input type="password" placeholder="Password" name="password">
-              <button class="input" type="button" value="Get Started">Get Started</button>
-          </form>
+          <hr style="width: 5%; ">
+          <br>
+          <p class="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Beatae porro quam mollitia, reprehenderit debitis quaerat 
+            temporibus laboriosam corrupti amet excepturi placeat voluptatum iusto, 
+            tenetur magnam.</p>
+            <br>
+            <button class="left-button" type="button" value="button">Download</button>
+        </div>
+        <div class="right">
+          <div class="form-container">
+            <form action="#" method="POST" class="register">
+                <label class="form-label"><p>Try Your <span> Free</span>Trial Today</p></label>
+                <input type="text" placeholder="Name" name="name">
+                <input type="email" placeholder="Email" name="email">
+                <input type="password" placeholder="Password" name="password">
+                <button class="input" type="button" value="Get Started">Get Started</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </section>
-  
+  <section class="social_links">
+      <div class="description">
+        <h1>Social Media</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam iure, 
+          illum earum eaque totam dolorem.</p>
+      </div>
+        <div class="icon-bar">
+          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="#" class="google"><i class="fa fa-google"></i></a>
+          <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+        </div>
+  </section>
+
+<section class="clickable-tabs">
+  <div class="row">
+    <div class="column clickable-tabs-right"><p>
+      <button class="tablinks">Tab1</button>
+      <button class="tablinks">Tab2</button>
+      <button class="tablinks">Tab3</button>
+    </p></div>
+    <div class="column clickable-tabs-middle">
+      <div id="clickable-tabs-middle-container">
+        <h1>Tabs with soft transition effect</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis magnam tempore nihil officia a placeat accusamus distinctio veritatis assumenda error. Ducimus earum minus ea ipsa.</p>
+        <button class="clickable-tabs-button">Download</button>
+      </div>  
+    </div>
+    <div class="column clickable-tabs-left"><img src="/2nd_task/images/clicable-tabs.jpg" alt="images"></div>
+  </div>
+</section>
+
+<section class="p1">
+  <div class="p1-image">
+    <img src="/2nd_task/images/p1.jpg">
+  </div>
+  <div class="p1-pargrapgh"> 
+    <div class="p1-pargrapgh-con">
+      <h1>Sub list section</h1>
+      <br>
+      <hr>
+      <br>
+      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe modi, distinctio dolorem sapiente labore quaerat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati consectetur beatae aut accusantium voluptatem pariatur autem voluptatum assumenda esse.</P>
+      <br>
+      <div>
+        <i class="fa fa-download" style="font-size:36px"></i>
+        <h4>Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas numquam dolore molestiae id, eligendi asperiores.</p>
+      </div>
+      <div>
+        <i class="fa fa-upload" style="font-size:36px"></i>
+        <h4>Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas numquam dolore molestiae id, eligendi asperiores.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="p2">
+  <div class="p2-image">
+    <img src="/2nd_task/images/p2.jpg">
+  </div>
+  <div class="p2-pargrapgh"> 
+    <div class="p2-pargrapgh-con">
+      <h1>Sub list section</h1>
+      <br>
+      <hr>
+      <br>
+      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe modi, distinctio dolorem sapiente labore quaerat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati consectetur beatae aut accusantium voluptatem pariatur autem voluptatum assumenda esse. </P>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta nulla optio ad eligendi. Error fuga in hic sed! In repudiandae mollitia deleniti sequi sint praesentium ea optio autem id earum!</p>
+      <br>
+      
+    </div>
+  </div>
+</section>
+<section class="style-download">
+  <div class="overlay">
+    <div class="download-area">
+      <h1>STYLISH AUXIER DESIGN</h1>
+      <hr>
+      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias!</P>
+      <button class="input" type="button" value="download">DOWNLOAD</button>
+
+    </div>
+
+  </div>
+
+</section>
+<section class="contact-us-section">
+  <div class="contact-us">
+    <h1>CONTACT US</h1>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  </div>
+  <div class="bottom-form">
+    <form action="#" method="POST" class="contact-us-form">
+      <div class="subject">
+        <input type="text" placeholder="Name" name="name">
+        <input type="email" placeholder="Email" name="email">
+        <input type="text" placeholder="Subject" name="subject">
+    </div>
+    <div class="bottom-area">
+      <textarea name="message" id="bottom-text" placeholder="message" cols="30" rows="10"></textarea>
+    </div>
+      <button class="input" type="button" value="Send messag">Send message</button>
+  </form>
+  </div>
+</section>
+<footer class="social-footer">
+  <div class="icon-bar-footer">
+    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+    <a href="#" class="google"><i class="fa fa-google"></i></a>
+    <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+    <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+  </div>
+  <div class="footer-span">
+    <span>&#169; AXURE2021</span>
+  </div>
+</footer>
 </body>
 </html>
