--- a/2nd_task/2nd_task.html
+++ b/2nd_task/2nd_task.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
   <title>AXIT</title>
 </head>
 <body>
@@ -124,10 +125,27 @@
       <br>
       <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe modi, distinctio dolorem sapiente labore quaerat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati consectetur beatae aut accusantium voluptatem pariatur autem voluptatum assumenda esse. </P>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta nulla optio ad eligendi. Error fuga in hic sed! In repudiandae mollitia deleniti sequi sint praesentium ea optio autem id earum!</p>
-      <br>
-      
+      <br> 
     </div>
   </div>
+</section>
+<section class="awesome">
+  <div class="top">
+    <h1>Why this is awesome</h1>
+    <hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+  </div>
+  <div class="flex">
+    <div class="icons">
+      <i class="far fa-lightbulb"></i>
+
+    </div>
+    <div class="p">
+
+    </div>
+
+  </div>
+
 </section>
 <section class="style-download">
   <div class="overlay">
@@ -136,9 +154,7 @@
       <hr>
       <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias!</P>
       <button class="input" type="button" value="download">DOWNLOAD</button>
-
     </div>
-
   </div>
 
 </section>
