--- a/4th_task/index.html
+++ b/4th_task/index.html
@@ -326,7 +326,7 @@
       </div>
     </div>
     <div class="row mt-5">
-      <div class="col-4 content-col">
+      <div class="all-content col-4 content-col">
         <div class="content bg-transparent border border-light rounded position-relative overflow-hidden mt-5">
           <div class="show  text-center text-white">
             <i class="fas fa-cloud-upload-alt fs-1"></i>
@@ -342,7 +342,7 @@
         </div>
 
       </div>
-      <div class="col-4 content-col">
+      <div class="all-content col-4 content-col">
         <div class="content bg-transparent border border-light rounded position-relative overflow-hidden mt-5">
           <div class="show  text-center text-white">
             <i class="fas fa-desktop fs-1"></i>
@@ -357,7 +357,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 content-col">
+      <div class="all-content col-4 content-col">
         <div class="content bg-transparent border border-light rounded position-relative overflow-hidden mt-5 mb-5">
           <div class="show  text-center text-white">
             <i class="far fa-edit fs-1"></i>
@@ -372,7 +372,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 content-col">
+      <div class="all-content col-4 content-col">
         <div class="content bg-transparent border border-light rounded position-relative overflow-hidden mt-5 mb-5">
           <div class="show  text-center text-white">
             <i class="fas fa-laptop-code fs-1"></i>
@@ -387,7 +387,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 content-col">
+      <div class="all-content col-4 content-col">
         <div class="content bg-transparent border border-light rounded position-relative overflow-hidden mt-5 mb-5">
           <div class="show  text-center text-white">
             <i class="fas fa-network-wired fs-1"></i>
@@ -402,7 +402,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 content-col">
+      <div class="all-content col-4 content-col">
         <div class="content bg-transparent border border-light rounded position-relative overflow-hidden mt-5 mb-5">
           <div class="show  text-center text-white">
             <i class="fab fa-wordpress-simple fs-1"></i>
@@ -519,11 +519,173 @@
   </div>
 </section>
 
-<div>
+<div class="e-commerce">
   <img  class="w-100 h-100 mb-5 mt-5" src="/4th_task/images/ecommerce-cover-2.jpg" alt="">
 </div>
 
 
+<section class="team bg-light">
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-12">
+        <div class="title text-center position-relative">
+          <h2 class="fs-1 fw-bolder position-relative d-inline-block">
+            <span class="fw-bolder">
+              Our Creative team
+            </span>
+          </h2>
+          <p class="fs-6 mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam inventore vero ipsa, obcaecati veniam quasi labore optio cumque enim eaque eligendi quae fuga perspiciatis! Natus praesentium omnis temporibus iste!</p>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="worker col-4 position-relative overflow-hidden">
+        <div>
+          <img class="w-50" src="/4th_task/images/team3.png" alt="">
+        </div>
+        <div class="hidden position-absolute bg-white shadow">
+          <div class="container pt-2">
+          <h5><a class="text-dark pb-5" href="#">John Jojo</a></h5>
+          <h6 class="text-primary">Founder</h6>
+          <p class="text.light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, similique!</p>
+          <div class="bg-primary rounded">
+            <ul class="d-flex justify-content-around text-white">
+              <li><a href="#"><i class="fab fa-facebook fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-tumblr fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in fs-3"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="worker col-4 position-relative overflow-hidden">
+        <div>
+          <img class="w-50" src="/4th_task/images/team1.png" alt="">
+        </div>
+        <div class="hidden position-absolute bg-white shadow">
+          <div class="container pt-2">
+          <h5><a class="text-dark pb-5" href="#">Jen Whyan</a></h5>
+          <h6 class="text-primary">Founder</h6>
+          <p class="text.light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, similique!</p>
+          <div class="bg-primary rounded">
+            <ul class="d-flex justify-content-around text-white">
+              <li><a href="#"><i class="fab fa-facebook fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-tumblr fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in fs-3"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="worker col-4 position-relative overflow-hidden">
+        <div>
+          <img class="w-50" src="/4th_task/images/team2.png" alt="">
+        </div>
+        <div class="hidden position-absolute bg-white shadow">
+          <div class="container pt-2">
+          <h5><a class="text-dark pb-5" href="#">Mical Peterson</a></h5>
+          <h6 class="text-primary">Founder</h6>
+          <p class="text.light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, similique!</p>
+          <div class="bg-primary rounded">
+            <ul class="d-flex justify-content-around text-white">
+              <li><a href="#"><i class="fab fa-facebook fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-tumblr fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in fs-3"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="worker col-4 position-relative overflow-hidden mt-5 mb-5">
+        <div>
+          <img class="w-50" src="/4th_task/images/team4.png" alt="">
+        </div>
+        <div class="hidden position-absolute bg-white shadow">
+          <div class="container pt-2">
+          <h5><a class="text-dark pb-5" href="#">Milly Jackson</a></h5>
+          <h6 class="text-primary">Founder</h6>
+          <p class="text.light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, similique!</p>
+          <div class="bg-primary rounded">
+            <ul class="d-flex justify-content-around text-white">
+              <li><a href="#"><i class="fab fa-facebook fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-tumblr fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in fs-3"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="worker col-4 position-relative overflow-hidden mt-5 mb-5">
+        <div>
+          <img class="w-50" src="/4th_task/images/team5.png" alt="">
+        </div>
+        <div class="hidden position-absolute bg-white shadow">
+          <div class="container pt-2">
+          <h5><a class="text-dark pb-5" href="#">Clark Jackson</a></h5>
+          <h6 class="text-primary">Founder</h6>
+          <p class="text.light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, similique!</p>
+          <div class="bg-primary rounded">
+            <ul class="d-flex justify-content-around text-white">
+              <li><a href="#"><i class="fab fa-facebook fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-tumblr fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in fs-3"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="worker col-4 position-relative overflow-hidden mt-5 mb-5">
+        <div>
+          <img class="w-50" src="/4th_task/images/team6.png" alt="">
+        </div>
+        <div class="hidden position-absolute bg-white shadow">
+          <div class="container pt-2">
+          <h5><a class="text-dark pb-5" href="#">Clark John</a></h5>
+          <h6 class="text-primary">Founder</h6>
+          <p class="text.light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, similique!</p>
+          <div class="bg-primary rounded">
+            <ul class="d-flex justify-content-around text-white">
+              <li><a href="#"><i class="fab fa-facebook fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-tumblr fs-3"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in fs-3"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="pricing">
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-12">
+        <div class="title text-center position-relative">
+          <h2 class="fs-1 fw-bolder position-relative d-inline-block">
+            <span class="fw-bolder">
+              Our Pricing
+            </span>
+          </h2>
+          <p class="fs-6 mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam inventore vero ipsa, obcaecati veniam quasi labore optio cumque enim eaque eligendi quae fuga perspiciatis! Natus praesentium omnis temporibus iste!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 
 
